FIX Suppression de l'ancre en version tablette

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1067,7 +1067,7 @@ body {
   }
 }
 
-@media (max-width: 819px) {
+@media (max-width: 1024px) {
   .vp-doc .header-anchor:before {
     content: none !important;
   }
